--- a/course2.css
+++ b/course2.css
@@ -95,9 +95,20 @@
 .content1 q span{
     color: #ff3758;
 }
+
+
 .content2{
   width: 400px;
   margin-left: 300px;
+}
+.content2 button{
+  padding: 10px;
+  background-color: #983e0a;
+  border: solid ;
+  border-color: #878fd3;
+  border-radius: 20px;
+  font-size: 20px;
+   
 }
 .content2 q{
   
@@ -105,7 +116,8 @@
 }
 .content2 h2{
   color: #ffffff;
-  font-size: 40px;
+  font-size: 35px;
+  text-align: center;
 }
 .content2 img{
   border-radius: 20px;
